aws_vpc.tf
resource "aws_vpc" "vpc" {
  cidr_block       = var.cidr
  enable_dns_hostnames = true
  tags = {
    Name = "myvpc"
  }
}
